@@ -1,5 +1,6 @@
 Current development version (0.12-SNAPSHOT)
 
+- Added `-library foo -dependencies bar,baz` to generate `@Library("foo", dependencies = {"bar", "baz"})` (issue #535)
 - Added JNA-only -forceStringSignatures option to force String and String[] params even with char* and char** (as opposed to const char* and const char**) (issue #476)
 - Added -skipDeprecated option for JNA output (issue #480)
 - Added -forceNames option to issue Name annotations for all supported entities (issue #443)
